# Hach_AI_weatherAgent

./: LICENSE  README.md  private_keys.json  pyproject.toml  weather.py
Weather_Agent/: .env  README.md  pyproject.toml
Weather_Agent/Src/weather_bot/: Weather.py  tempCodeRunnerFile.py
Weather_Agent/src/weather_agent/: testin_uagent.py  uagent_test.py
weather/myapp/: models.py  urls.py  views.py
weather/myapp/migrations/: 0001_initial.py  0002_createuser_delete_user.py  0003_users_delete_createuser.py  0004_alter_users_table.py  0005_user_delete_users.py  0006_users_delete_user.py
weather/myapp/templates/: homePage.html  loginForm.html  userForm.html
weather/weather/: settings.py  urls.py
