[tool.poetry]
name = "weather agent"
version = "0.1.0"
description = "Alrets the user based on user temperature requrements"
authors = ["Aditya06046 <adityamandapaka39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
