[tool.poetry]
name = "weather-agent"
version = "0.1.0"
description = ""
authors = ["Aditya06046 <adityamandapaka39@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
